--- a/Assignment2/html/assignment.html
+++ b/Assignment2/html/assignment.html
@@ -14,7 +14,7 @@
     <nav class="bar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">Assignment-Work</span></a>
+          <a href="#">Assignment - Work</span></a>
         </div>
         <ul class="menu">
             <li id="link1"><a href="index.html">Home</a></li>
@@ -27,6 +27,24 @@
     </nav>
 
     <div class="assignment" id="assignment">
+        <div class="max-width">
+                <table id="skills">
+                    <thead>
+                      <tr>
+                        <th colspan="2">Name</th>
+                        <th>Skills</th>
+                        <th>Level</th>
+                      </tr>
+                      <tr>
+                        <th>First</th>
+                        <th>Last</th>
+                        <th colspan="3"></th>
+                      </tr>
+                    </thead>
+              
+                    <tbody id="InsertHere"></tbody>
+            </table>
+        </div>
 
     </div>
    </body>
