--- a/Assignment2/html/gallery.html
+++ b/Assignment2/html/gallery.html
@@ -26,8 +26,21 @@
       </div>
     </nav>
 
-    <div class="gallery" id="gallery">
-
+    <div class="gallery">
+        <div class="max-width">
+        <div class="heading1">
+            My Memories
+        </div>
+        <img class="slideshow" id="changingimage" src="../img/slide1.jpeg" onclick="change_image()">
+        <br>
+        <div class="heading2">
+            My Icons
+        </div>
+        <br>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3uSMrSVvDZz5MOUNlBEwIFMHSM-w_5oC_0A&usqp=CAU" class="dhoni">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOedZHcjS3mU8lVIMiMzzaNISBwINmwlcUzA&usqp=CAU" class="manoj">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLL2nNNpK_pAn1eLT9yjIXzYl4FReK3n-0rg&usqp=CAU" class="elon">
+        </div>
     </div>
 
     </body>
