--- a/Assignment2/html/index.html
+++ b/Assignment2/html/index.html
@@ -17,11 +17,11 @@
           <a href="#">About <span>Me</span></a>
         </div>
         <ul class="menu">
-            <li id="link1"><a href="index.html">Home</a></li>
-            <li id="link2"><a href="skills.html">Skills</a></li>
-            <li id="link3"><a href="gallery.html">Gallery</a></li>
-            <li id="link4"><a href="assignment.html">Assignment</a></li>
-            <li id="link5"><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" id="link1">Home</a></li>
+            <li><a href="skills.html" id="link2">Skills</a></li>
+            <li><a href="gallery.html" id="link3">Gallery</a></li>
+            <li><a href="assignment.html" id="link4">Assignment</a></li>
+            <li><a href="contact.html" id="link5">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +29,7 @@
     <!-- homepage -->
 
     <div class="home" id="home">
-      <img src="https://photos.google.com/photo/AF1QipPcoud3Vl3NgzLhoYcScR2sS_pDM1tmNkU2pMYK.jpg">
+      <img src="https://lh3.googleusercontent.com/YeKGETvWY9U70AQjdjs_iGmGvQ6gx4z__eI42tsoecdk7ibSNA5b13fv74kFHqL-CceBRKnGHIsuGTifIRWuDWQzhtE8XMn5oRdCo40jDLEBHH2jkrqsMg-TyO9x2hICFFvcJShbkmopveLbyKzHFUcJ8lg6LgmxhHE5Tl1TT5jdEAnVZ4zGUAaIMMzt37JKynsCEYbcn1IuYsDbvbnuOpaohwDiTE4-_c5op8R25h5f0IN1TZ8UjVsc2rI3xbAeKLLm4SNEfc2B1GnlIt9c_V4crvvfIEPn53nZikcZipanU6fj_8uPgOj4SFXju7ueqyh6ptWDF0D2wPFtEjJMu1oU6gSCeKJNNSInr5XQH5T7yNgEK0jW2JFz6YOp3gtBocctn35SGakdLT200U-uuSQi2ZeSSXvu-VYoXH95eTy1U749GdN81gil2DN0n761C4WqjNyarCPrLpBXg8uiiMJMXeyN1fn-uLxq2u2yrNRtBA3BHnsVx8USbax7KVBLbrbL0SaSG4UEo0-36rMxAdXC5qu9M-Z11otR7q-NImqjXfX4lkfkRQeSJERoGPSeJt0k7KkHz7EhAWXXACTz5dohKEpuOK92pHKLJiDfWXT4V3kaWxA6sPEJVVMHpSc-5ul3WBT4YmqsW01reaaUgXJJ5uBT0Ev2T3uQZ8Zh-y2aH2pfaqDQmyOBl60Yj9O0zkPuPIFxqIE9giAsknW84nSo=w1079-h820-no?authuser=0" />
 
       <div class="max-width">
         <div class="home-content">
