--- a/Assignment2/html/skills.html
+++ b/Assignment2/html/skills.html
@@ -28,7 +28,7 @@
 
     <!--main body section -->
 
-    <div class="skills" id="skills">
+    <div class="skills-page" id="skills-page">
         <div class="max-width">
         <h2 class="head1">
             Sports:
@@ -52,7 +52,7 @@
                 I tend to write clean and clear codes. They are understandable to a person.<br>
                 I am also learning Python and can write some basic codes in it.<br>
                 You can also visit my <a class="github-link" href="https://github.com/AyanAgrawal25/Assignment-Shell-Team-49">project's website</a> to see the project I made with my team.
-                
+
             </div>
     </div>
     </body>
